2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Handle multiple overprint characters, albeit not
	the way people probably expect.
	Bug #3371782

2011-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Remove size limit on svg plot dimensions.

2011-07-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp: Fix MSWin breakage from yesterday's patch
	due to conditional code block damage.
	Bug #3376861

	* src/datafile.c (df_readbinary): Allow "using ... xticlabels()" for
	binary files as well as ascii files.  Only string-valued functions
	are valid in this case, as no string can be read from the binary 
	datafield itself.

	* src/graph3d.h src/hidden3d.c src/misc.c src/misc.h src/plot3d.c:
	Re-work assignment of color and line type to top/bottom hidden3d
	surfaces.  Keep the user-requested linetype in a new field of the
	splot structure, since otherwise linetype definitions would overwrite
	it. 

2011-07-23  Adam Strzelecki <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h m4/apple.m4:
	OSX support for wxt terminal.  For OSX, switch to using single-threaded
	hybrid GUI & console event loop at wxt_waitforinput().
	Add -framework ApplicationServices to the apple-specific
	configuration flags.

2011-07-23  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* m4/apple.m4:  Replace -laquaterm with -Wl,-framework -Wl,AquaTerm
	which is supposed to make the Macports version of aquaterm install
	properly.

2011-07-22  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/parse.c src/parse.h plot2d.c plot3d.c set.c unset.c command.c:
	Revise iteration-over-plot mechanism to handle edge cases of nested
	iteration correctly.

2011-07-20  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Point types 10 and 11 were upside down.
	Bug #3368877

	* fill paths now have a pensize > 0 to have slight overlap of tiles to
	avoid rendering artifacts
